footer added to pricing page

--- a/Home/Pricing.html
+++ b/Home/Pricing.html
@@ -12,12 +12,7 @@
     <title>Pricing Guide for Cakes on Cakes</title>
 </head>
 <body>
-    <Header>
-     <!-- <div class="Vertical Header">
-        <H1>Pricing</H1>
-     </div> -->
-
-    </Header>
+    
     <div class="Arch">
         <div class="arch-logo">
             <img src="/images/Cakesoncakes_Logo.png" alt="Cakes on cakes logo: glass cloche">
@@ -145,6 +140,24 @@
             </div>
         </div>
     </div>
+    <footer class="footer" id="footer">
+        <div class="contact-links">
+          <h2>Contact Us</h2>
+          <ul>
+            <li><a href="mailto:example@example.com">example@example.com</a></li>
+            <li><a href="tel:+1234567890">+123 456 7890</a></li>
+            <li><a href="#">1234 Elm Street, Retro City</a></li>
+          </ul>
+        </div>
+        <div class="social-media-links">
+          <h2>Follow Us</h2>
+          <ul>
+            <li><a href="#"><img src="/images/facebook.png" alt="Facebook"></a></li>
+            <li><a href="#"><img src="/images/instagram.png" alt="Instagram"></a></li>
+          </ul>
+        </div>
+        <a href="index.html"><img src="/images/Cakesoncakes_Logo.png" alt="logo"></a>
+      </footer>
 </body>
 </html>
 
