--- a/Home/contact.html
+++ b/Home/contact.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About/Cakes on Cakes</title>
+    <title>Contact/Cakes on Cakes</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -17,10 +17,10 @@
      <nav>
         <ul>
           <li><a href="/index.html" >Home</a></li>
-          <li><a href="/Home/about.html"class="active-link">About</a></li>
+          <li><a href="/Home/about.html">About</a></li>
           <li><a href="/PricingSheet_Cakesoncakes.jpg" target="_blank">Pricing</a></li>
           <li><a href="/Home/gallery.html">Gallery</a></li>
-          <li><a href="#contact">Contact</a></li>
+          <li><a href="/Home/contact.html"class="active-link">Contact</a></li>
         </ul>
       </nav>
     </div>
@@ -31,18 +31,19 @@
     </div>
   </header>
 <body>
-<div class="about-container">
-    <div class="about-one">
-        <img src="/images/exampleprofile.jpg" alt="head shot of jay">
-
-        <h2>The Baker</h2>
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Omnis aliquam velit tenetur eos, temporibus laudantium distinctio totam reprehenderit sit sapiente nobis vitae ad cumque repudiandae eaque exercitationem eveniet autem culpa, adipisci odio at. Asperiores iusto eveniet tempore totam incidunt nisi vel obcaecati quam? Impedit, cupiditate enim culpa tempore obcaecati vero.</p>
-    </div>
-    <div class="about-two">
-
-        <h2>The Process</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam minima, magni perferendis quasi incidunt atque, voluptatem voluptates rerum facilis aliquam non magnam esse quis, doloremque dolorem nihil itaque quisquam sed ullam sunt enim? Perspiciatis, officia necessitatibus aspernatur nesciunt obcaecati esse atque. Accusantium eveniet doloremque pariatur temporibus eligendi nam magni numquam porro vel. Deserunt quasi quaerat velit amet animi dicta ducimus perspiciatis tempora nemo incidunt. Error velit aliquam pariatur nulla ipsa, iusto eveniet sed blanditiis voluptatem sit officiis quas nesciunt labore, nemo consectetur nihil suscipit consequuntur debitis similique maiores repudiandae repellat dignissimos! Blanditiis fugit minima, reiciendis asperiores autem optio rem libero!</p>
-    </div>
+<div class="contact-container">
+    <h2>Contact Us</h2>
+    <form action="mailto:cakesoncakeschicago@gmail.com" method="post" enctype="text/plain">
+        <label for="name">Name:</label>
+        <input type="text" id="name" name="name" required>
+        <label for="email">Email:</label>
+        <input type="email" id="email" name="email" required>
+        <label for="phone">Phone:</label>
+        <input type="tel" id="phone" name="phone" required>
+        <label for="message">Message:</label>
+        <textarea id="message" name="message" required></textarea>
+        <input type="submit" value="Submit">
+    </form>
 </div>
 </body>
 <footer class="footer" id="footer">
