--- a/Home/contact.html
+++ b/Home/contact.html
@@ -24,14 +24,14 @@
         </ul>
       </nav>
     </div>
-    <div class="social-icons">
+    <!-- <div class="social-icons">
       <a href="#"><img src="/images/facebook.png" alt="facebook"></a>
       <a href="https://www.instagram.com/cakesoncakeschicago/"target="_blank"><img src="/images/instagram.png" alt="instagram"></a>
   
-    </div>
+    </div> -->
   </header>
 <body>
-<div class="contact-container">
+<!-- <div class="contact-container">
     <h2>Contact Us</h2>
     <form action="mailto:cakesoncakeschicago@gmail.com" method="post" enctype="text/plain">
         <label for="name">Name:</label>
@@ -44,7 +44,7 @@
         <textarea id="message" name="message" required></textarea>
         <input type="submit" value="Submit">
     </form>
-</div>
+</div> -->
 </body>
 <footer class="footer" id="footer">
  
@@ -68,6 +68,6 @@
       </div>
       
   </div>
-  <p>&copy; copyright, Jay Mast</p>
+  <p>&copy; 2023, Jay Mast</p>
 </footer>
 </html>
