--- a/Home/gallery.html
+++ b/Home/gallery.html
@@ -24,11 +24,11 @@
         </ul>
       </nav>
     </div>
-    <div class="social-icons">
+    <!-- <div class="social-icons">
       <a href="#"><img src="/images/facebook.png" alt="facebook"></a>
       <a href="https://www.instagram.com/cakesoncakeschicago/"target="_blank"><img src="/images/instagram.png" alt="instagram"></a>
   
-    </div>
+    </div> -->
   </header>
 <body>
     <div class="gallery">
@@ -86,6 +86,6 @@
         </div>
         
     </div>
-    <p>&copy; copyright, Jay Mast</p>
+    <p>&copy; 2023, Jay Mast</p>
   </footer>
   </html>
