--- a/index.html
+++ b/index.html
@@ -29,11 +29,13 @@
         </ul>
       </nav>
     </div>
+    <!-- removing social media icons for now -  takes up space -->
     <!-- <div class="social-icons">
     <a href="#"><img src="/images/facebook.png" alt="facebook"></a>
     <a href="https://www.instagram.com/cakesoncakeschicago/"target="_blank"><img src="/images/instagram.png" alt="instagram"></a>
 
   </div> -->
+
   </header>
  
   <div class="hero-container">
