updated about from wireframing

--- a/Home/Pricing.html
+++ b/Home/Pricing.html
@@ -162,22 +162,32 @@
         </div>
     </div>
     <footer class="footer" id="footer">
-        <div class="contact-links">
-          <h2>Contact Us</h2>
-          <ul>
-            <li><a href="mailto:example@example.com">example@example.com</a></li>
-            <li><a href="tel:+1234567890">+123 456 7890</a></li>
-            <li><a href="#">1234 Elm Street, Retro City</a></li>
-          </ul>
+ 
+        <div class="footer-container">
+            
+                <div class="contact-links">
+                    <h2>Contact</h2>
+                    <ul>
+                        <li><a href="mailto:cakesoncakeschicago@gmail.com">cakesoncakeschicago@gmail.com</a></li>
+                        <!-- <li><a href="tel:+5742385371">Call or Text</a></li> -->
+                        <li><a href="#">East Lakeview, Chicago, IL</a></li>
+                    </ul>
+                </div>
+                <div class="social-media-links">
+                    <h2>Follow</h2>
+                    <ul>
+                        <li><a href="#"><img src="/images/facebook.png" alt="Facebook"></a></li>
+                        <li><a href="https://www.instagram.com/cakesoncakeschicago/" target="_blank"><img src="/images/instagram.png" alt="Instagram"></a></li>
+                    </ul>
+                </div>
+           <div class="footer-logo">
+              <img src="/images/Cakesoncakes_Logo.png" alt="">
+           </div>
+         
         </div>
-        <div class="social-media-links">
-          <h2>Follow Us</h2>
-          <ul>
-            <li><a href="#"><img src="/images/facebook.png" alt="Facebook"></a></li>
-            <li><a href="#"><img src="/images/instagram.png" alt="Instagram"></a></li>
-          </ul>
-        </div>
-        <a href="index.html"><img src="/images/Cakesoncakes_Logo.png" alt="logo"></a>
+       <div class="copyright">
+              <p>&copy; 2023, Jay Mast</p>
+          </div>
       </footer>
 </body>
 </html>
