--- a/index.html
+++ b/index.html
@@ -82,29 +82,32 @@
 
 </body>
 <footer class="footer" id="footer">
-
+ 
   <div class="footer-container">
-    <div class="footer-info">
-      <div class="contact-links">
-        <h2>Contact</h2>
-        <ul>
-          <li><a href="mailto:cakesoncakeschicago@gmail.com">cakesoncakeschicago@gmail.com</a></li>
-          <!-- <li><a href="tel:+5742385371">Call or Text</a></li> -->
-          <li><a href="#">East Lakeview, Chicago, IL</a></li>
-        </ul>
-      </div>
-      <div class="social-media-links">
-        <h2>Follow</h2>
-        <ul>
-          <li><a href="#"><img src="/images/facebook.png" alt="Facebook"></a></li>
-          <li><a href="https://www.instagram.com/cakesoncakeschicago/" target="_blank"><img src="/images/instagram.png"
-                alt="Instagram"></a></li>
-        </ul>
-      </div>
-    </div>
-
+      
+          <div class="contact-links">
+              <h2>Contact</h2>
+              <ul>
+                  <li><a href="mailto:cakesoncakeschicago@gmail.com">cakesoncakeschicago@gmail.com</a></li>
+                  <!-- <li><a href="tel:+5742385371">Call or Text</a></li> -->
+                  <li><a href="#">East Lakeview, Chicago, IL</a></li>
+              </ul>
+          </div>
+          <div class="social-media-links">
+              <h2>Follow</h2>
+              <ul>
+                  <li><a href="#"><img src="/images/facebook.png" alt="Facebook"></a></li>
+                  <li><a href="https://www.instagram.com/cakesoncakeschicago/" target="_blank"><img src="/images/instagram.png" alt="Instagram"></a></li>
+              </ul>
+          </div>
+     <div class="footer-logo">
+        <img src="/images/Cakesoncakes_Logo.png" alt="">
+     </div>
+   
   </div>
-  <p>&copy; 2023, Jay Mast</p>
+ <div class="copyright">
+        <p>&copy; 2023, Jay Mast</p>
+    </div>
 </footer>
 
 </html>
