--- a/Home/contact.html
+++ b/Home/contact.html
@@ -49,7 +49,7 @@
 <footer class="footer" id="footer">
  
   <div class="footer-container">
-      <div class="footer-info">
+      
           <div class="contact-links">
               <h2>Contact</h2>
               <ul>
@@ -65,9 +65,13 @@
                   <li><a href="https://www.instagram.com/cakesoncakeschicago/" target="_blank"><img src="/images/instagram.png" alt="Instagram"></a></li>
               </ul>
           </div>
-      </div>
-      
+     <div class="footer-logo">
+        <img src="/images/Cakesoncakes_Logo.png" alt="">
+     </div>
+   
   </div>
-  <p>&copy; 2023, Jay Mast</p>
+ <div class="copyright">
+        <p>&copy; 2023, Jay Mast</p>
+    </div>
 </footer>
 </html>
