updated index to match wireframe

--- a/Home/contact.html
+++ b/Home/contact.html
@@ -12,11 +12,10 @@
     <link href="https://fonts.googleapis.com/css2?family=Cardo&display=swap" rel="stylesheet">
 </head>
 <header > 
-    <h1>CAKES ON CAKES</h1>
+  <h1><a href="/index.html">CAKES ON CAKES</a></h1>
     <div class="sticky-nav">
      <nav>
         <ul>
-          <li><a href="/index.html" >Home</a></li>
           <li><a href="/Home/about.html">About</a></li>
           <li><a href="/PricingSheet_Cakesoncakes.jpg" target="_blank">Pricing</a></li>
           <li><a href="/Home/gallery.html">Gallery</a></li>
@@ -24,11 +23,7 @@
         </ul>
       </nav>
     </div>
-    <!-- <div class="social-icons">
-      <a href="#"><img src="/images/facebook.png" alt="facebook"></a>
-      <a href="https://www.instagram.com/cakesoncakeschicago/"target="_blank"><img src="/images/instagram.png" alt="instagram"></a>
-  
-    </div> -->
+   
   </header>
 <body>
 <!-- <div class="contact-container">
