--- a/Home/Pricing.html
+++ b/Home/Pricing.html
@@ -14,7 +14,7 @@
         <link href="https://fonts.googleapis.com/css2?family=Cardo&display=swap" rel="stylesheet">
     </head>
     <header > 
-        <h1>CAKES ON CAKES</h1>
+        <h1><a href="/index.html">CAKES ON CAKES</a></h1>
         <div class="sticky-nav">
          <nav>
             <ul>
