--- a/Home/Pricing.html
+++ b/Home/Pricing.html
@@ -18,6 +18,16 @@
 
     <link href="https://fonts.googleapis.com/css2?family=Cardo&display=swap" rel="stylesheet">
 </head>
+
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-XB1T6R8KQX"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-XB1T6R8KQX');
+</script>
 <header>
     <h1><a href="/index.html">CAKES ON CAKES</a></h1>
     <div class="sticky-nav" id="sticky-nav">
