syntax updates / footer

--- a/Home/gallery.html
+++ b/Home/gallery.html
@@ -25,7 +25,7 @@
 </script>
 <header>
   <h1><a href="/index.html">CAKES ON CAKES</a></h1>
-  <div class="sticky-nav" id="sticky-nav">
+  <div class="nav-menu" id="nav-menu">
     <nav>
       <ul>
         <li><a href="/Home/about.html">About</a></li>
