--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
   <link rel="stylesheet" href="/Home/styles.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link
-    href="https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,300;0,400;0,600;1,300;1,400&display=swap"
+  <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,300;0,400;0,600;1,300;1,400&display=swap"
     rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <link href="https://fonts.googleapis.com/css2?family=Cardo&display=swap" rel="stylesheet">
+  <link rel="icon" type="image/png" href="images/Cakesoncakes_Logo.png"/>
 </head>
 
 <!-- Google tag (gtag.js) -->
@@ -27,7 +27,7 @@
 </script>
 <header>
   <h1><a href="/index.html">CAKES ON CAKES</a></h1>
-  <div class="sticky-nav" id="sticky-nav">
+  <div class="nav-menu" id="nav-menu">
     <nav>
       <ul>
         <li><a href="/Home/about.html">About</a></li>
@@ -50,7 +50,6 @@
 
 <body>
 
-
   <div class="hero-container">
     <div class="hero-image">
 
@@ -62,25 +61,22 @@
     <div class="story-textbox">
       <div class="story-text">
         <h2>You look hungry</h2>
-        <p>Welcome to Jay's kitchen! Located in East Lakeview, Chicago and committed to delivering the best quality
+        <p>Welcome to the kitchen! Located in East Lakeview, Chicago and committed to delivering the best quality
           baked
-          goods to the local community and beyond (ever been shipped a box of cookies?). </p>
-        <p>Not just a bakery for cakes - but we're pretty d*mn good at those - Cakes on Cakes can stir up a variety of
+          goods to the local community and beyond (ever been shipped a box of cookies?). <br> <br> Not just a bakery for cakes - but we're pretty d*mn good at those - Cakes on Cakes can stir up a variety of
           sweets that indulge and create lasting memories for a birthday, wedding, or just chilling at home with your
-          friends!</p>
-        <p>Because we're small and pretty stinkin' nice, everything is customizable - but don't worry if you don't
+          friends! <br> <br>Because we're small and pretty stinkin' nice, everything is customizable - but don't worry if you don't
           know
           where to start. Our signature cakes, cookies and pies are spectacular and have been taste-tested for years
           on
-          years. Some recipes are even taken from Jay's great-grandmother's Amish kitchen. </p>
-        <p>So come on in. Grab a fork. And take a bite.</p>
+          years. Some recipes are even taken from Jay's great-grandmother's Amish kitchen.  <br> <br> So come on in. Grab a fork. And take a bite.</p>
       </div>
     </div>
     <div class="story-right">
       <div class="story-image">
 
       </div>
-      <a href="/Home/Pricing.html"><button type="button">See full menu</button></a>
+      <a href="/PricingSheet_Cakesoncakes.jpg" target="_blank"><button type="button">See full menu</button></a>
 
     </div>
   </div>
