--- a/Home/Pricing.html
+++ b/Home/Pricing.html
@@ -31,7 +31,7 @@
 
 <header>
     <h1><a href="/index.html">CAKES ON CAKES</a></h1>
-    <div class="sticky-nav" id="sticky-nav">
+    <div class="nav-menu" id="nav-menu">
         <nav>
             <ul>
                 <li><a href="/Home/about.html">About</a></li>
